correção no histórico, adição de producer/consumer no ms-gerente (incompleto)